@@ -26,7 +26,6 @@ package co.elastic.apm.agent.bci;
 
 import co.elastic.apm.agent.bci.bytebuddy.MatcherTimer;
 import co.elastic.apm.agent.context.AbstractLifecycleListener;
-import co.elastic.apm.agent.impl.ElasticApmTracer;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
