@@ -25,7 +25,6 @@
 package co.elastic.apm.agent.servlet.wildfly;
 
 import co.elastic.apm.agent.context.AbstractLifecycleListener;
-import co.elastic.apm.agent.context.LifecycleListener;
 import co.elastic.apm.agent.impl.ElasticApmTracer;
 
 /**
